syntax = "proto3";

package rpcSpec;
option go_package = "./;rpcSpec";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

message CreateCommentRequest {
  int64 userId = 1;
  int64 entityId = 2;
  int32 type = 3;
  string content = 4;
  google.protobuf.Int64Value parentId = 5;
}

service CommentService {
  // 创建评论
  rpc CreateComment(CreateCommentRequest) returns (google.protobuf.Empty);
}